fix: texte aligné à gauche même si court

--- a/src/App/components/Slide/styles.scss
+++ b/src/App/components/Slide/styles.scss
@@ -84,6 +84,7 @@
 .fraude-slide__text {
   z-index: 1;
   padding: 0 28px;
+  width: 100%;
 }
 
 .fraude-slide__title {
